More removed unused methods from java